force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <label>Sales Performance</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sales Performance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>