force-app/main/default/objects/Sales_Target__c/fields/Achieved_Percent__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Percent__c</fullName>
    <formula>IF(Secondary_Sales_Target__c &gt; 0, Team_Secondary_Sales_Actual__c / Secondary_Sales_Target__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>