force-app/main/default/objects/Sales_Target__c/fields/Assigned_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Role__c</fullName>
    <formula>Assigned_To__r.Employee_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Role</label>
    <type>Text</type>
</CustomField>