force-app/main/default/objects/Sales_Target__c/fields/Litre_Sold_Target__c.field-meta.xml
<CustomField>
    <fullName>Litre_Sold_Target__c</fullName>
    <label>Litre Sold Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>