force-app/main/default/objects/Sales_Target__c/fields/LPSC_total_orders_of_bills_Target__c.field-meta.xml
<CustomField>
    <fullName>LPSC_total_orders_of_bills_Target__c</fullName>
    <label>LPSC(total orders/# of bills) Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>