force-app/main/default/objects/Sales_Target__c/fields/Monthly_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Records_Limit__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Monthly Records Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>