force-app/main/default/objects/Sales_Target__c/fields/New_Outlet_Opened_Actual__c.field-meta.xml
<CustomField>
    <fullName>New_Outlet_Opened_Actual__c</fullName>
    <label>New Outlet Opened Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>