force-app/main/default/objects/Sales_Target__c/fields/New_Outlet_Opened_Target__c.field-meta.xml
<CustomField>
    <fullName>New_Outlet_Opened_Target__c</fullName>
    <label>New Outlet Opened Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>