force-app/main/default/objects/Sales_Target__c/fields/Number_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Month__c</fullName>
    <label>Number of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>