force-app/main/default/objects/Sales_Target__c/fields/Primary_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Actual__c</fullName>
    <label>Primary Sales Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>