force-app/main/default/objects/Sales_Target__c/fields/Primary_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Target__c</fullName>
    <label>Primary Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>