force-app/main/default/objects/Sales_Target__c/fields/Productive_Calls_Target__c.field-meta.xml
<CustomField>
    <fullName>Productive_Calls_Target__c</fullName>
    <label>Productive Calls Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>