force-app/main/default/objects/Sales_Target__c/fields/Sales_Performance_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Sales_Performance_Yearly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Performance - Yearly</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Sales Performances</relationshipLabel>
    <relationshipName>Sales_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>