force-app/main/default/objects/Sales_Target__c/fields/Sales_Realization_Actual__c.field-meta.xml
<CustomField>
    <fullName>Sales_Realization_Actual__c</fullName>
    <formula>Primary_Sales_Actual__c  /  Litre_Sold_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Realization Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>