force-app/main/default/objects/Sales_Target__c/fields/Sales_Realization_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Realization_Target__c</fullName>
    <label>Sales Realization Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>