force-app/main/default/objects/Sales_Target__c/fields/Secondary_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Actual__c</fullName>
    <label>Secondary Sales Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>