force-app/main/default/objects/Sales_Target__c/fields/Secondary_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Target__c</fullName>
    <label>Secondary Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>