force-app/main/default/objects/Sales_Target__c/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <externalId>true</externalId>
    <label>Target Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>