force-app/main/default/objects/Sales_Target__c/fields/Team_Secondary_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Team_Secondary_Sales_Actual__c</fullName>
    <label>Team Secondary Sales Actual</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>