force-app/main/default/objects/Sales_Target__c/fields/Total_DF_Throughput_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_DF_Throughput_Target__c</fullName>
    <label>Total DF Throughput % Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>