force-app/main/default/objects/Sales_Target__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Sales Representative</fullName>
            </value>
            <value>
                <fullName>Sales Officer</fullName>
            </value>
            <value>
                <fullName>Senior Sales Officer</fullName>
            </value>
            <value>
                <fullName>Area Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>