force-app/main/default/objects/Sales_Target__c/fields/X20Rs_N_MRP_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>X20Rs_N_MRP_Sales_Target__c</fullName>
    <label>&lt;20Rs N=MRP Sales % Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>