force-app/main/default/objects/Sales_Target__c/recordTypes/Sales_Target_Month.recordType-meta.xml
<RecordType>
    <fullName>Sales_Target_Month</fullName>
    <active>true</active>
    <label>Sales Performance - Month</label>
</RecordType>