force-app/main/default/objects/Sales_Target__c/recordTypes/Sales_Target_Year.recordType-meta.xml
<RecordType>
    <fullName>Sales_Target_Year</fullName>
    <active>true</active>
    <label>Sales Performance - Year</label>
</RecordType>