force-app/main/default/objects/Sales_Target__c/listViews/Sales_Performances_Month.listView-meta.xml
<ListView>
    <fullName>Sales_Performances_Month</fullName>
    <columns>NAME</columns>
    <columns>User_Role__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Target__c.Sales_Target_Month</value>
    </filters>
    <label>Sales Performances - Month</label>
</ListView>