force-app/main/default/objects/Sales_Target__c/listViews/Sales_Performances_Year.listView-meta.xml
<ListView>
    <fullName>Sales_Performances_Year</fullName>
    <columns>NAME</columns>
    <columns>User_Role__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Year__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Performances - Year</label>
</ListView>